# invi

./: .gitignore  Cargo.toml  README.md
crates/libs/lib-commons/: Cargo.toml
crates/libs/lib-commons/src/: fields.rs  lib.rs  value.rs  value_store.rs
crates/libs/lib-commons/src/value/: builder.rs  ext.rs
crates/libs/lib-commons/src/value_store/: builder.rs  macros.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  error.rs  lib.rs
crates/libs/lib-model/: Cargo.toml
crates/libs/lib-model-data/: .gitignore  Cargo.toml
crates/libs/lib-model-data/src/: exec.rs  lib.rs
crates/libs/lib-model-data/src/exec/: types.rs
crates/libs/lib-model-data/src/store/: image.rs  items.rs  location_metadata.rs  locations.rs  mod.rs  records.rs
crates/libs/lib-model-schema/: .gitignore  Cargo.toml
crates/libs/lib-model-schema/src/: exec.rs  lib.rs  store.rs
crates/libs/lib-model/src/: _dev_utils.rs  cache.rs  error.rs  image_store.rs  lib.rs  store.rs
crates/libs/lib-model/src/cache/: mod.rs
crates/libs/lib-model/src/store/: image.rs  items.rs  location_metadata.rs  locations.rs  mod.rs  records.rs
crates/libs/lib-model/src/store/image/: types.rs
crates/libs/lib-model/src/store/items/: types.rs
crates/libs/lib-model/src/store/locations/: location_metadata.rs  types.rs
crates/libs/lib-model/src/store/records/: types.rs
crates/libs/lib-schema/: Cargo.toml
crates/libs/lib-schema/src/: extractor.rs  generator.rs  lib.rs  registry.rs  schema.rs  types.rs  validator.rs  value_store.rs
crates/libs/lib-schema/src/types/: json_schema.rs  mod.rs  rs_schema.rs  schema.rs
crates/libs/lib-schema/src/types/rs_schema/property/: mod.rs  se.rs
crates/libs/lib-schema/src/types/rs_schema/types/: de.rs  mod.rs  ser.rs  wrapper.rs
crates/libs/lib-schema/src/types/rs_schema/types/info/: array.rs  float.rs  integer.rs  mod.rs  object.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/types/: error_descriptor.rs  mod.rs
crates/services/invi/: Cargo.toml
crates/services/invi/src-tauri/: Cargo.toml  tauri.conf.json
crates/services/invi/src-tauri/src/: main.rs
tests/: dev.db  images.redb  item_metadata.json
tests/image/: 0031.avif  0031_1.txt  0031_2.txt  0032.avif  0033.avif
tests/migrations/: 00-recreate.sql  01-initial.sql  02-insert-data.sql
tests/migrations/initial/schema/: 00-recreate.sql  01-initial.sql
