[workspace]
members = [
    "crates/libs/lib-core",
    "crates/libs/lib-model",
    "crates/libs/lib-utils",
    "crates/services/invi/src-tauri",
    "crates/services/invi",
    "crates/libs/lib-schema",
    "crates/libs/lib-sync", "crates/libs/lib-image", "crates/libs/lib-export", "crates/services/s", "crates/libs/lib-commons",
]
resolver = "3"


[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.30", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "json"] }
lib-core = { path = "crates/libs/lib-core" }
lib-model = { path = "crates/libs/lib-model", features = ["serde"] }
lib-utils = { path = "crates/libs/lib-utils" }
lib-schema = { path = "crates/libs/lib-schema" }
lib-commons = { path = "crates/libs/lib-commons" }
chrono = "0.4.41"
redb = "2.6.2"
uuid = "1.17.0"


serial_test = "3.2.0"

[workspace.lints.rust]
unused = { level = "allow", priority = -1 }