[package]
name = "lib-model"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = { workspace = true, features = ["raw_value"] }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }

lib-utils = { path = "../lib-utils" }
lib-schema = { path = "../lib-schema" }
