[package]
name = "lib-model"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = { workspace = true, features = ["raw_value"] }
serde = { workspace = true }
sqlx = { workspace = true, features = ["chrono", "sqlite", "runtime-tokio"] }
tokio = { workspace = true }
chrono = { workspace = true }
redb = { workspace = true }
uuid = { workspace = true, features = ["v7", "std"] }

lib-commons = { workspace = true ,features = ["sqlx"] }

[dev-dependencies]
serial_test = { workspace = true }

[features]
serde = ["chrono/serde"]